cluster/kubernetes/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaime-back
  namespace: jaime
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /jaime-back/*
        pathType: Prefix
        backend:
          service:
            name: jaime-back
            port:
              number: 5000
